refactor(app): move source to src/app

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   <!-- TODO: insert SEO tags -->
 </head>
 <body>
-  <script src="dist.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
