feat: add color schema globally

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Predictive Text Studio </title>
   <link rel="stylesheet" href="style.css" media="all">
+  <link
+    href="https://fonts.googleapis.com/css?family=Cabin:400,400italic,500,600,700,700italic|Source+Sans+Pro:400,700,900,600,300|Noto+Serif:400"
+    rel="stylesheet" type="text/css">
   <!-- TODO: insert SEO tags -->
 </head>
 <body>
