feat(app): use routes

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <!-- TODO: insert SEO tags -->
 </head>
 <body>
-  <script src="app.js"></script>
+  <script src="/app.js"></script>
   <link rel='stylesheet' href='/global.css'>
 </body>
 </html>
