--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <meta
       name="description"
-      content="Create predictive text for YOUR language! Designed for Keyman, Predictive Text Studio generates a KMP file for you to add a custom predictive keyboard to your devices."
+      content="Create predictive text and autocorrect for YOUR language! Designed for Keyman, Predictive Text Studio makes a custom predictive keyboard for your devices using a spreadsheet of words in your language."
     />
   </head>
   <body>
